--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>Hey. I'm a big heading</h1>
-<p>Hey. Im a paragraph </p>
-<a href="https://google.com" target="_blank" title="Lets go to google!"> Click me! im a link</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Test page</title>
+</head>
+<body>
+    <h1>Hey. I'm a big heading</h1>
+    <p>Hey. Im a paragraph </p>
+    <a href="https://google.com" target="_blank" title="Lets go to google!"> Click me! im a link</a>
+    <p>My name is: <br>Kitty Cat</p>
+    <img src="img/cat.jpeg">
+</body>
+</html>
