Deleted cat photo+add gideon photo+started work on atual website

--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Test page</title>
+<head> 
+    <title>Sir Gideon, the all knowing</title>
 </head>
 <body>
-    <h1>Hey. I'm a big heading</h1>
-    <p>Hey. Im a paragraph </p>
-    <a href="https://google.com" target="_blank" title="Lets go to google!"> Click me! im a link</a>
-    <p>My name is: <br>Kitty Cat</p>
-    <img src="img/cat.jpeg">
+    <header>
+        <img src="img/Gideon-Avatar.jpg">
+        <h1
+    </header>
 </body>
 </html>
