Added his name to header

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <title>Sir Gideon, the all knowing</title>
 </head>
 <body>
+    <!--Header element-->
     <header>
         <img src="img/Gideon-Avatar.jpg">
-        <h1
+        <h1>Sir Gideon, the All Knowing</h1>
     </header>
 </body>
 </html>
