--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head> 
-    <title>Sir Gideon, the all knowing</title>
+    <title>Sir Gideon Ofnir, the all knowing</title>
 </head>
 <body>
     <!--Header element-->
     <header>
         <img src="img/Gideon-Avatar.jpg">
-        <h1>Sir Gideon, the All Knowing</h1>
+        <h1>Sir Gideon Ofnir, the All Knowing</h1>
     </header>
+    <!--Main element-->
+    <main>
+        <h2> Quick Overview</h2>
+        <p>Sir.Gideon Ofnir is one of the few fellow tarnished that you meet on your journey in Eldin Ring. He is the leader of the Roundtable hold, a group that, while once great, is now simply a reffuge for tarnished. 
+            His goal is to become eldin lord, like you, though he has issurmountable amounts of knollege, more than you could even begin to coprehend. He also has an adopted daughter, Nepheli. </p>
+    </main>
 </body>
 </html>
