Added Characteristics + Relation to character

--- a/index.html
+++ b/index.html
@@ -11,9 +11,31 @@
     </header>
     <!--Main element-->
     <main>
+        <h1>SPOILERS FOR ELDIN RING</h1>
         <h2> Quick Overview</h2>
         <p>Sir.Gideon Ofnir is one of the few fellow tarnished that you meet on your journey in Eldin Ring. He is the leader of the Roundtable hold, a group that, while once great, is now simply a reffuge for tarnished. 
             His goal is to become eldin lord, like you, though he has issurmountable amounts of knollege, more than you could even begin to coprehend. He also has an adopted daughter, Nepheli. </p>
+        <h2>Characteristics</h2>
+        <ol>
+            <li>Highly knollegeable</li>
+            <li>Ambitious</li>
+            <li>Manipulative</li>
+            <li>Egotistical (hencs the name)</li>
+        </ol>
+        <h2>Relations to other characters</h2>
+        <h3>The chosen tarnished</h3>
+        <p>When you first join the Roundtable, Gideon does welcome you, but gives you a warning that you must prove your worth in order to stay. You do this by killing your first shardbearer, and 
+            Gideon officialy accepts you as a member of the hold. He then imparts apon you knollege about the shardbearers. When you recieve your second great rune, he gains even more faith in you, and instructs
+            you to go to the capital city, Leyndell, to the foot of the erdtree. When spoken to about her daughter, he refers to her as if she is nothing more than a tool to be used, even saying to use 
+            her if "she has any use for you." After Nepheli confronts his father after he sends agents to massacure the albanuric village, he simply dissowns her, saying that she is no longer of any use. He also 
+            tells you to dispose of selevisus potion if you talk to him about it, as they are not on good terms. You can also find out more information on the the consintratd snowfield, mogwyn palace, and the haligetree
+            after aquiring certain items. When you burn down the erdtree, and the Roundtable starts to burn with it, he simply says that it has served its purpose in helping a tarnished become lord. However, as you near
+            the erdtree, he stops you and enitias combat. Why he does this is partialy up for debate, but you do end up defeating him, with his last words being: "I know...in my bones...
+            A Tarnished cannot become a Lord. Not even you. A man cannot kill a god...". Sure, Gideon.
+        </p>
+        <h3>The rest of the Roundtable Hold</h3>
+        <p></p>
     </main>
+
 </body>
 </html>
