Added icon, footer, and more characters

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head> 
     <title>Sir Gideon Ofnir, the all knowing</title>
+    <link rel="icon" href="img/gideon_Helmet.jpeg">
 </head>
 <body>
     <!--Header element-->
@@ -15,13 +16,15 @@
         <h2> Quick Overview</h2>
         <p>Sir.Gideon Ofnir is one of the few fellow tarnished that you meet on your journey in Eldin Ring. He is the leader of the Roundtable hold, a group that, while once great, is now simply a reffuge for tarnished. 
             His goal is to become eldin lord, like you, though he has issurmountable amounts of knollege, more than you could even begin to coprehend. He also has an adopted daughter, Nepheli. </p>
-        <h2>Characteristics</h2>
+        <!--Characteristics-->
+            <h2>Characteristics</h2>
         <ol>
             <li>Highly knollegeable</li>
             <li>Ambitious</li>
             <li>Manipulative</li>
             <li>Egotistical (hencs the name)</li>
         </ol>
+        <!--Relations to other characters-->
         <h2>Relations to other characters</h2>
         <h3>The chosen tarnished</h3>
         <p>When you first join the Roundtable, Gideon does welcome you, but gives you a warning that you must prove your worth in order to stay. You do this by killing your first shardbearer, and 
@@ -33,9 +36,18 @@
             the erdtree, he stops you and enitias combat. Why he does this is partialy up for debate, but you do end up defeating him, with his last words being: "I know...in my bones...
             A Tarnished cannot become a Lord. Not even you. A man cannot kill a god...". Sure, Gideon.
         </p>
+        <h3>Nepheli</h3>
+        <p>Gideon first encountered </p>
+
         <h3>The rest of the Roundtable Hold</h3>
-        <p></p>
+        <p>Although Gideon is the leader of the Roundtable Hold, he does not seem to be very engaged with his allies. He spend the majority of his time in his room reading, and is only ever seen taling to you. In fact,
+            he does not even use the name of another member of the hold in any of your conversations.
+        </p>
     </main>
 
+    <!--Footer-->
+<footer>
+    <p>This website was created for a <a target="_blank" href="https://www.skillshare.com/en/classes/hand-code-your-first-website-html-css-basics/1575146775/projects?via=custom-lists">skillshare class by Rich From TapTapKaboom</a>. Thank you for the great info! &copy;Arben</p>
+</footer>
 </body>
 </html>
