--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ol>
         <!--Relations to other characters-->
         <h2>Relations to other characters</h2>
-        <h3>The chosen tarnished</h3>
+        <h3>The chosen tarnished</h3> <!--Main Character-->
         <p>When you first join the Roundtable, Gideon does welcome you, but gives you a warning that you must prove your worth in order to stay. You do this by killing your first shardbearer, and 
             Gideon officialy accepts you as a member of the hold. He then imparts apon you knollege about the shardbearers. When you recieve your second great rune, he gains even more faith in you, and instructs
             you to go to the capital city, Leyndell, to the foot of the erdtree. When spoken to about her daughter, he refers to her as if she is nothing more than a tool to be used, even saying to use 
@@ -36,13 +36,22 @@
             the erdtree, he stops you and enitias combat. Why he does this is partialy up for debate, but you do end up defeating him, with his last words being: "I know...in my bones...
             A Tarnished cannot become a Lord. Not even you. A man cannot kill a god...". Sure, Gideon.
         </p>
-        <h3>Nepheli</h3>
-        <p>Gideon first encountered </p>
+        <h3>Nepheli</h3> <!--Nepheli-->
+        <p>Gideon first encountered Nepheli after she had already lost the guidence of grace, and did not take her in out of the kindness of his heart, but simply for her to do his bidding
+            In his search for the secret meddalion, he sends agents to ransack the albanuric villige, which leads to his daughter loosing faith in him. When she confronts him about this, he 
+            simply dissowns her, as if she had ment nothing to her at all, and was merly a pawn in his game.</p>
+            <p><a target="_blank" href="https://eldenring.wiki.fextralife.com/Nepheli+Loux">More info on Nepheli</a></p>
 
-        <h3>The rest of the Roundtable Hold</h3>
+        <h3>Seluvis</h3> <!--Seluvis-->
+        <p>Gideon and Seluvis have a bitter rivalry, though that was not always the case. At one point, along with a woman named Delores, they are resided within the Roundtable Hold.
+            However, due to some sort of conflict, they went their seperate ways. In Seluvis's questline, you can give Nepheli a potion that will turn her into a puppet for Seluvis. It 
+            is possible that, in order to one up Gideon, he wanted to take Nepheli away from him. However, you can simply give the potion to Gideon, and he will get rid of it.</p>
+        <p><a target="_blank" href="https://eldenring.wiki.fextralife.com/Preceptor+Seluvis"></a></p>
+
+        <h3>The rest of the Roundtable Hold</h3> <!--Rest of the Hold-->
         <p>Although Gideon is the leader of the Roundtable Hold, he does not seem to be very engaged with his allies. He spend the majority of his time in his room reading, and is only ever seen taling to you. In fact,
-            he does not even use the name of another member of the hold in any of your conversations.
-        </p>
+            he does not even use the name of another member of the hold in any of your conversations.</p>
+        <p><a target="_blank" href="https://eldenring.wiki.fextralife.com/Roundtable+Hold">More info on the Roundtable Hold</a></p>
     </main>
 
     <!--Footer-->
