Added some css, changed some formating

--- a/index.html
+++ b/index.html
@@ -3,38 +3,42 @@
 <head> 
     <title>Sir Gideon Ofnir, the all knowing</title>
     <link rel="icon" href="img/gideon_Helmet.jpeg">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="css/hero.css"
 </head>
 <body>
     <!--Header element-->
     <header>
-        <img src="img/Gideon-Avatar.jpg">
-        <h1>Sir Gideon Ofnir, the All Knowing</h1>
+        <h1>Sir Gideon Ofnir</h1>
+        <img src="img/Gideon-Avatar.jpg" class="center">
+        <h1>The All Knowing</h1>
     </header>
     <!--Main element-->
     <main>
-        <h1>SPOILERS FOR ELDIN RING</h1>
         <h2> Quick Overview</h2>
         <p>Sir.Gideon Ofnir is one of the few fellow tarnished that you meet on your journey in Eldin Ring. He is the leader of the Roundtable hold, a group that, while once great, is now simply a reffuge for tarnished. 
             His goal is to become eldin lord, like you, though he has issurmountable amounts of knollege, more than you could even begin to coprehend. He also has an adopted daughter, Nepheli. </p>
         <!--Characteristics-->
             <h2>Characteristics</h2>
         <ol>
-            <li>Highly knollegeable</li>
+            <li>Highly knowledgeable</li>
             <li>Ambitious</li>
             <li>Manipulative</li>
             <li>Egotistical (hencs the name)</li>
         </ol>
         <!--Relations to other characters-->
         <h2>Relations to other characters</h2>
-        <h3>The chosen tarnished</h3> <!--Main Character-->
+        <h3>The Chosen Tarnished</h3> <!--Main Character-->
         <p>When you first join the Roundtable, Gideon does welcome you, but gives you a warning that you must prove your worth in order to stay. You do this by killing your first shardbearer, and 
             Gideon officialy accepts you as a member of the hold. He then imparts apon you knollege about the shardbearers. When you recieve your second great rune, he gains even more faith in you, and instructs
-            you to go to the capital city, Leyndell, to the foot of the erdtree. When spoken to about her daughter, he refers to her as if she is nothing more than a tool to be used, even saying to use 
-            her if "she has any use for you." After Nepheli confronts his father after he sends agents to massacure the albanuric village, he simply dissowns her, saying that she is no longer of any use. He also 
+            you to go to the capital city, Leyndell, to the foot of the erdtree. </p>
+        <p>When spoken to about her daughter, he refers to her as if she is nothing more than a tool to be used, even saying to use  her if "she has any use for you." After Nepheli confronts his father after he sends agents to massacure the albanuric village, he simply dissowns her, saying that she is no longer of any use. He also 
             tells you to dispose of selevisus potion if you talk to him about it, as they are not on good terms. You can also find out more information on the the consintratd snowfield, mogwyn palace, and the haligetree
-            after aquiring certain items. When you burn down the erdtree, and the Roundtable starts to burn with it, he simply says that it has served its purpose in helping a tarnished become lord. However, as you near
-            the erdtree, he stops you and enitias combat. Why he does this is partialy up for debate, but you do end up defeating him, with his last words being: "I know...in my bones...
-            A Tarnished cannot become a Lord. Not even you. A man cannot kill a god...". Sure, Gideon.
+            after aquiring certain items. When you burn down the erdtree, and the Roundtable starts to burn with it, he simply says that it has served its purpose in helping a tarnished become lord. </p>
+        <p>However, as you near the erdtree, he stops you and initiates combat. Why he does this is partialy up for debate, but you do end up defeating him, with his last words being: "I know...in my bones...
+            A Tarnished cannot become a Lord. Not even you. A man cannot kill a god...".</p>
         </p>
         <h3>Nepheli</h3> <!--Nepheli-->
         <p>Gideon first encountered Nepheli after she had already lost the guidence of grace, and did not take her in out of the kindness of his heart, but simply for her to do his bidding
@@ -46,7 +50,7 @@
         <p>Gideon and Seluvis have a bitter rivalry, though that was not always the case. At one point, along with a woman named Delores, they are resided within the Roundtable Hold.
             However, due to some sort of conflict, they went their seperate ways. In Seluvis's questline, you can give Nepheli a potion that will turn her into a puppet for Seluvis. It 
             is possible that, in order to one up Gideon, he wanted to take Nepheli away from him. However, you can simply give the potion to Gideon, and he will get rid of it.</p>
-        <p><a target="_blank" href="https://eldenring.wiki.fextralife.com/Preceptor+Seluvis"></a></p>
+        <p><a target="_blank" href="https://eldenring.wiki.fextralife.com/Preceptor+Seluvis">More info on Seluvis</a></p>
 
         <h3>The rest of the Roundtable Hold</h3> <!--Rest of the Hold-->
         <p>Although Gideon is the leader of the Roundtable Hold, he does not seem to be very engaged with his allies. He spend the majority of his time in his room reading, and is only ever seen taling to you. In fact,
@@ -56,7 +60,8 @@
 
     <!--Footer-->
 <footer>
-    <p>This website was created for a <a target="_blank" href="https://www.skillshare.com/en/classes/hand-code-your-first-website-html-css-basics/1575146775/projects?via=custom-lists">skillshare class by Rich From TapTapKaboom</a>. Thank you for the great info! &copy;Arben</p>
+    <p>This website was created for a <a target="_blank" href="https://www.skillshare.com/en/classes/hand-code-your-first-website-html-css-basics/1575146775/projects?via=custom-lists">skillshare class by Rich From TapTapKaboom</a>. Thank you for the great info!</p>
+    <p>&copy;Arben</p>
 </footer>
 </body>
 </html>
