Finished up css

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <li>Highly knowledgeable</li>
             <li>Ambitious</li>
             <li>Manipulative</li>
-            <li>Egotistical (hencs the name)</li>
+            <li>Egotistical (hence the name)</li>
         </ol>
         <!--Relations to other characters-->
         <h2>Relations to other characters</h2>
