changed p to br

--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@
         <h3>The Chosen Tarnished</h3> <!--Main Character-->
         <p>When you first join the Roundtable, Gideon does welcome you, but gives you a warning that you must prove your worth in order to stay. You do this by killing your first shardbearer, and 
             Gideon officialy accepts you as a member of the hold. He then imparts apon you knollege about the shardbearers. When you recieve your second great rune, he gains even more faith in you, and instructs
-            you to go to the capital city, Leyndell, to the foot of the erdtree. </p>
-        <p>When spoken to about her daughter, he refers to her as if she is nothing more than a tool to be used, even saying to use  her if "she has any use for you." After Nepheli confronts his father after he sends agents to massacure the albanuric village, he simply dissowns her, saying that she is no longer of any use. He also 
+            you to go to the capital city, Leyndell, to the foot of the erdtree.<br>When spoken to about her daughter, he refers to her as if she is nothing more than a tool to be used, even saying to use  her if "she has any use for you." After Nepheli confronts his father after he sends agents to massacure the albanuric village, he simply dissowns her, saying that she is no longer of any use. He also 
             tells you to dispose of selevisus potion if you talk to him about it, as they are not on good terms. You can also find out more information on the the consintratd snowfield, mogwyn palace, and the haligetree
-            after aquiring certain items. When you burn down the erdtree, and the Roundtable starts to burn with it, he simply says that it has served its purpose in helping a tarnished become lord. </p>
-        <p>However, as you near the erdtree, he stops you and initiates combat. Why he does this is partialy up for debate, but you do end up defeating him, with his last words being: "I know...in my bones...
-            A Tarnished cannot become a Lord. Not even you. A man cannot kill a god...".</p>
+            after aquiring certain items. When you burn down the erdtree, and the Roundtable starts to burn with it, he simply says that it has served its purpose in helping a tarnished become lord.<br>However, as you near the erdtree, he stops you and initiates combat. Why he does this is partialy up for debate, but you do end up defeating him, with his last words being: "I know...in my bones...
+            A Tarnished cannot become a Lord. Not even you. A man cannot kill a god...".
         </p>
         <h3>Nepheli</h3> <!--Nepheli-->
         <p>Gideon first encountered Nepheli after she had already lost the guidence of grace, and did not take her in out of the kindness of his heart, but simply for her to do his bidding
